// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Pull Request Object > get metadata() 1`] = `
Metadata {
  "_commentID": undefined,
  "_tag": undefined,
  "controller": {},
  "issueNumber": 0,
}
`;

exports[`Pull Request Object > get metadata() 2`] = `
Metadata {
  "_commentID": undefined,
  "_tag": "v1",
  "controller": {},
  "issueNumber": 0,
}
`;

exports[`Pull Request Object > get metadata() 3`] = `
Metadata {
  "_commentID": "123456789",
  "_tag": undefined,
  "controller": {},
  "issueNumber": 0,
}
`;

exports[`Pull Request Object > get metadata() 4`] = `
Metadata {
  "_commentID": "123456789",
  "_tag": "v1",
  "controller": {},
  "issueNumber": 0,
}
`;

exports[`Pull Request Object > get metadata() 5`] = `
Metadata {
  "_commentID": undefined,
  "_tag": "alpha",
  "controller": {},
  "issueNumber": 0,
}
`;

exports[`Pull Request Object > get metadata() 6`] = `
Metadata {
  "_commentID": undefined,
  "_tag": "beta",
  "controller": {},
  "issueNumber": 0,
}
`;

exports[`Pull Request Object > get metadata() 7`] = `
Metadata {
  "_commentID": undefined,
  "_tag": "v250-rc1",
  "controller": {},
  "issueNumber": 0,
}
`;

exports[`Pull Request Object > isFreezed() 1`] = `false`;

exports[`Pull Request Object > isFreezed() 2`] = `false`;

exports[`Pull Request Object > isFreezed() 3`] = `false`;

exports[`Pull Request Object > isFreezed() 4`] = `true`;

exports[`Pull Request Object > isFreezed() 5`] = `false`;

exports[`Pull Request Object > isFreezed() 6`] = `false`;

exports[`Pull Request Object > isFreezed() 7`] = `false`;

exports[`Pull Request Object > isTagPolicyCompliant() 1`] = `false`;

exports[`Pull Request Object > isTagPolicyCompliant() 2`] = `false`;

exports[`Pull Request Object > isTagPolicyCompliant() 3`] = `false`;

exports[`Pull Request Object > isTagPolicyCompliant() 4`] = `false`;

exports[`Pull Request Object > isTagPolicyCompliant() 5`] = `false`;

exports[`Pull Request Object > isTagPolicyCompliant() 6`] = `false`;

exports[`Pull Request Object > isTagPolicyCompliant() 7`] = `false`;

exports[`Pull Request Object > isTagPolicyCompliant() 8`] = `false`;

exports[`Pull Request Object > isTagPolicyCompliant() 9`] = `true`;

exports[`Pull Request Object > isTagPolicyCompliant() 10`] = `false`;

exports[`Pull Request Object > isTagPolicyCompliant() 11`] = `true`;

exports[`Pull Request Object > isTagPolicyCompliant() 12`] = `false`;

exports[`Pull Request Object > isTagPolicyCompliant() 13`] = `false`;

exports[`Pull Request Object > isTagPolicyCompliant() 14`] = `true`;
